Updated node_modules and added cps.css

--- a/Projects/angular_js_app/src/templates/todo.html
+++ b/Projects/angular_js_app/src/templates/todo.html
@@ -1,3 +1,5 @@
 <ul>
   <li ng-repeat="task in tasks">{{ task.name }}</li>
+  <a ng-href="#/tasks">Lista de Tarefas</a>
+  <a ng-href="#/task/{{ task.id }}">Detalhes da Tarefa</a>
 </ul>
